src/components/Services/style.css
.Service-section {
  /* margin-top: 20px; */
  text-align: center;
  padding: 20px;
  margin-bottom: 5%;
}

.Services {
  margin-top: 50px;
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
  gap: 30px;
}
.card { 
 
  height: 300px;
  width: 250px;
  background-color: #212529;
 border: none;
  max-width: 100%;
  height: auto;
  display: block;
  margin: 0 auto;
  padding: 10px;
 
}



.card-info {
  font-size: 22px;
  color: #96835f;
  
}
.card-img {
  max-width: 100%;
  height: auto;
  display: block;
}

.Numbers {
  margin-top: 20px;
  margin-left: 50px;
  margin-right: 50px;
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  margin-top: 120px;
  gap: 20px;
  padding: 10px;
  border-radius: 9px;
}

.count {
  color: #96835f;
  font-size: 2.5rem;
  font-weight: bold;
  display: flex;
  justify-content: center;
}

.line {
  padding: 10px;
}
.line-right {
  padding: 10px;
}

.counts{
display: flex;
flex-direction: column;
align-items: center;
}





.icon-style{
 font-size: 5rem;
}

.money{
  text-wrap: nowrap;
}

